--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
          <button class="btn btn-primary mt-2" type="submit">Recordar</button>
          <h3><h3 id="respuesta" class="text-center fw-light">
       </section>
-      <hr>
     </form>
-    <form action="https://formsubmit.co/marianadeoliveira384@gmail.com"  method="post">
+      <hr>
+   <form action="https://formsubmit.co/marianadeoliveira384@gmail.com" id="formulario"  method="post">
    
       <section class="form-register">
 
@@ -339,7 +339,7 @@
       </section> 
       </form>
 <hr>
-    <form action="https://formsubmit.co/marianadeoliveira384@gmail.com" method="post>  ">
+    <form action="https://formsubmit.co/marianadeoliveira384@gmail.com" id="formulario" method="post">
       <section class="form-register">
         <div class="datos">
           <h4>
@@ -394,7 +394,7 @@
   <div class="botones">
     <a  href="./Pages/Afiliación.html" class="afiliarse" ><input type="submit" class="boton1" onclick= 'return afiliarse();' value="Afiliarse"></a>
     
-    <a class="buy"><input type="reset" class="boton2" value="Restablecer"></a> 
+    <a class="buy"><input type="reset" class="boton2"  onclick = "reset();" value="Restablecer"></a> 
 
   </div>
   <div class="error" id="error"></div>
