--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MarianadeOliveira-MaximilianoTeves</title>
-   <link rel="stylesheet"  href="./Css/estilos.css"> 
+   <!--<link rel="stylesheet"  href="./Css/estilos.css">>--> 
    <!-- <link rel="stylesheet" href="./Css/estilos-futuro.css"> -->
-  <!--  <link rel="stylesheet" href="Css/estilos-retro.css">-->
+  <link rel="stylesheet" href="Css/estilos-retro.css"
     
 </head>
 <body id="fondo">
